# nfl_data_py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_form.yml  data_issue.yml  feature_request.yml
.github/workflows/: lint-and-test.yml  publish-release-to-pypi.yml
nfl_data_py/: __init__.py  troubleshooting_info.py
