[project]
name = "nfl_data_py"
dynamic = ["version"]
requires-python = ">=3.6.1,<3.13"
description = "python library for interacting with NFL data"
urls = { homepage = "https://github.com/nflverse/nfl_data_py"}
authors = [{name = "cooperdff"}]
maintainers = [{name = "Alec Ostrander", email = "alec.ostrander@gmail.com"}]
readme = "README.md"
# license = "MIT"
# license-files = ["LICENSE"]
# Need to use the deprecated format until we drop Python 3.8 support
license = {text = "MIT"}
dependencies = [
    "appdirs==1.*",
    "fastparquet>0.5",
    "numpy==1.*",
    "pandas==1.*",
]
classifiers = [
    # Trove classifiers. Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Operating System :: OS Independent',
]

[dependency-groups]
dev = [
    "debugpy",
    "invoke",
    "ipykernel",
    "ipython",
    "jupyter",
    "matplotlib",
    "ruff",
    "seaborn",
]
test = [
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nfl_data_py"]

[tool.setuptools.dynamic]
version = {attr = "nfl_data_py.__version__"}

[tool.ruff]
cache-dir = ".venv/.ruff_cache"
line-length = 90

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["nfl_data_py/tests"]
cache_dir = ".venv/.pytest_cache"